Fix Logo SVG Overflow

--- a/assets/scss/generic/_normalize.scss
+++ b/assets/scss/generic/_normalize.scss
@@ -100,6 +100,10 @@ img {
   border: 0;
 }
 
+svg:not(:root) {
+  overflow: visible;
+}
+
 .ie9 svg:not(:root) {
   overflow: hidden;
 }
